Add existing file

--- a/front/html/index.html
+++ b/front/html/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet" />
 
+    <script src="../js/products.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -49,13 +50,13 @@
           <h2>Quality sofas for you home</h2>
         </div>
         <section class="items" id="items"> 
-           <a href="./product.html?id=42">
+<!--           <a href="./product.html?id=42">
             <article>
               <img src=".../product01.jpg" alt="Lorem ipsum dolor sit amet, Kanap name1">
               <h3 class="productName">Kanap name1</h3>
               <p class="productDescription">Dis enim malesuada risus sapien gravida nulla nisl arcu. Dis enim malesuada risus sapien gravida nulla nisl arcu.</p>
             </article>
-          </a> 
+          </a> -->
         </section>
       </div>
     </main>
