--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -134,5 +134,6 @@
       </div>
     </footer>
   <script src="../js/cart.js"></script>
+  <script src="../js/cartDom.js"></script>
   </body>
 </html>
