Add existing file

--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -135,5 +135,6 @@
     </footer>
   <script src="../js/cart.js"></script>
   <script src="../js/cartDom.js"></script>
+  <script src="../js/order.js"></script>
   </body>
 </html>
